[gd_scene load_steps=14 format=3 uid="uid://cie2e7ge67p4w"]

[ext_resource type="Script" uid="uid://bb0qas0h4bcar" path="res://Scripts/box_editor.gd" id="1_1srkk"]
[ext_resource type="Script" uid="uid://cjotv0ui8dm6r" path="res://Scenes/Tools/editor_camera.gd" id="2_e446d"]
[ext_resource type="Environment" uid="uid://jsqpfw82fbi" path="res://world_environment.tres" id="2_ekjgq"]
[ext_resource type="Material" uid="uid://boov5m5w86nyq" path="res://Materials/grid_mat.tres" id="3_14lqj"]

[sub_resource type="QuadMesh" id="QuadMesh_ysvca"]
material = ExtResource("3_14lqj")
size = Vector2(15, 15)

[sub_resource type="Theme" id="Theme_t275h"]
default_font_size = 28

[sub_resource type="Theme" id="Theme_im8cm"]
default_font_size = 45

[sub_resource type="Theme" id="Theme_7773o"]
default_font_size = 65

[sub_resource type="Theme" id="Theme_65p1k"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_vco7c"]
default_font_size = 35

[sub_resource type="Theme" id="Theme_12ksq"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_auj21"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_m2wye"]
default_font_size = 28

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("animation_option_button", "character_option_button", "hitbox_option_button", "current_frame_edit", "end_frame_edit", "total_frame_label", "var_frame_edit", "var_end_frame_edit", "var_position_x_edit", "var_position_y_edit", "var_scale_x_edit", "var_scale_y_edit", "var_damage_edit", "var_blockstun_edit", "var_hitstun_edit", "var_hitstop_edit", "var_pushback_edit", "var_pushtime_edit", "var_height_edit", "var_sfx_edit", "var_cancel_edit", "var_cancel_frame_edit")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.985718, 0, 0)
script = ExtResource("1_1srkk")
animation_option_button = NodePath("AnimationOptionButton")
character_option_button = NodePath("CharacterOptionButton")
hitbox_option_button = NodePath("HitboxOptionButton")
current_frame_edit = NodePath("CurrentFrameEdit")
end_frame_edit = NodePath("EndFrameEdit")
total_frame_label = NodePath("TotalFrameLabel")
var_frame_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Frame/VarFrameEdit")
var_end_frame_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/EndFrame/VarEndFrameEdit")
var_position_x_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Position/VarPositionXEdit")
var_position_y_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Position/VarPositionYEdit")
var_scale_x_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Scale/VarScaleXEdit")
var_scale_y_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Scale/VarScaleYEdit")
var_damage_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Damage/VarDamageEdit")
var_blockstun_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Blockstun/VarBlockstunEdit")
var_hitstun_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Hitstun/VarHitstunEdit")
var_hitstop_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Hitstop/VarHitstopEdit")
var_pushback_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Pushback/VarPushbackEdit")
var_pushtime_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/PushTime/VarPushTimeEdit")
var_height_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Height/VarHeightEdit")
var_sfx_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/SFX/VarSFXEdit")
var_cancel_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Cancel/VarCancelEdit")
var_cancel_frame_edit = NodePath("ScrollContainer/MarginContainer/VBoxContainer/CancelFrame/VarCancelFrameEdit")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 4)
projection = 1
size = 8.0
script = ExtResource("2_e446d")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_ekjgq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 12, 10)

[node name="Wall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -34.04)
material_override = ExtResource("3_14lqj")
mesh = SubResource("QuadMesh_ysvca")

[node name="FrameLabel" type="Label" parent="."]
offset_top = 199.0
offset_right = 245.0
offset_bottom = 241.0
theme = SubResource("Theme_t275h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Current Frame:"

[node name="TotalFrameLabel" type="Label" parent="."]
offset_top = 315.0
offset_right = 245.0
offset_bottom = 357.0
theme = SubResource("Theme_t275h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Total Frames: 00"

[node name="EndFrameLabel" type="Label" parent="."]
offset_top = 257.0
offset_right = 245.0
offset_bottom = 299.0
theme = SubResource("Theme_t275h")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "End Frame:"

[node name="HitboxButton" type="Button" parent="."]
offset_top = 578.0
offset_right = 450.0
offset_bottom = 678.0
theme = SubResource("Theme_im8cm")
text = "Create Hitbox"

[node name="SaveButton" type="Button" parent="."]
offset_left = 1669.0
offset_top = 933.0
offset_right = 1881.0
offset_bottom = 1033.0
theme = SubResource("Theme_im8cm")
text = "Save"

[node name="DeleteButton" type="Button" parent="."]
offset_left = 461.0
offset_top = 920.0
offset_right = 673.0
offset_bottom = 1020.0
theme = SubResource("Theme_im8cm")
text = "Delete"

[node name="HurtboxButton" type="Button" parent="."]
offset_top = 692.0
offset_right = 450.0
offset_bottom = 792.0
theme = SubResource("Theme_im8cm")
text = "Create Hurtbox"

[node name="ThrowButton" type="Button" parent="."]
offset_top = 806.0
offset_right = 450.0
offset_bottom = 906.0
theme = SubResource("Theme_im8cm")
text = "Create Throw"

[node name="ThrowboxButton" type="Button" parent="."]
offset_top = 920.0
offset_right = 450.0
offset_bottom = 1020.0
theme = SubResource("Theme_im8cm")
text = "Create Throwbox"

[node name="CharacterOptionButton" type="OptionButton" parent="."]
offset_right = 450.0
offset_bottom = 100.0
theme = SubResource("Theme_7773o")
selected = 0
item_count = 3
popup/item_0/text = "grappler"
popup/item_0/id = 0
popup/item_1/text = "kamenjogger"
popup/item_1/id = 1
popup/item_2/id = 2

[node name="HitboxOptionButton" type="OptionButton" parent="."]
offset_left = 1470.0
offset_right = 1920.0
offset_bottom = 100.0
theme = SubResource("Theme_65p1k")

[node name="AnimationOptionButton" type="OptionButton" parent="."]
offset_top = 120.0
offset_right = 450.0
offset_bottom = 182.0
theme = SubResource("Theme_vco7c")

[node name="LeftButton" type="Button" parent="."]
offset_left = 348.0
offset_top = 195.0
offset_right = 398.0
offset_bottom = 245.0
theme = SubResource("Theme_12ksq")
text = "<"

[node name="RightButton" type="Button" parent="."]
offset_left = 400.0
offset_top = 195.0
offset_right = 450.0
offset_bottom = 245.0
theme = SubResource("Theme_12ksq")
text = ">"

[node name="CurrentFrameEdit" type="LineEdit" parent="."]
offset_left = 223.0
offset_top = 195.0
offset_right = 343.0
offset_bottom = 245.0
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="EndFrameEdit" type="LineEdit" parent="."]
offset_left = 223.0
offset_top = 253.0
offset_right = 343.0
offset_bottom = 303.0
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1471.0
offset_top = 113.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="Frame" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarFrameLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Frame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 94.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Frame:"

[node name="VarFrameEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Frame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Blockstun" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarBlockstunLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Blockstun"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 141.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Blockstun:"

[node name="VarBlockstunEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Blockstun"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Hitstun" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarHitstunLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Hitstun"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 108.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Hitstun:"

[node name="VarHitstunEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Hitstun"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Damage" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarDamageLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Damage"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 119.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Damage:"

[node name="VarDamageEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Damage"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Position" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarPositionLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Position"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 117.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Position:"

[node name="VarPositionXEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Position"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="VarPositionYEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Position"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 260.0
offset_top = -18.0
offset_right = 342.0
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Scale" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarScaleLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Scale"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 77.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Scale:"

[node name="VarScaleXEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Scale"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="VarScaleYEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Scale"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 260.0
offset_top = -18.0
offset_right = 342.0
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="EndFrame" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarEndFrameEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/EndFrame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="VarEndFrameLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/EndFrame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 152.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "End Frame:"

[node name="Box" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="VarBoxLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Box"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 59.0
offset_bottom = 15.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Box:"

[node name="BoxOptionButton" type="OptionButton" parent="ScrollContainer/MarginContainer/VBoxContainer/Box"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -25.0
offset_right = 318.0
offset_bottom = 25.0
grow_vertical = 2
theme = SubResource("Theme_65p1k")
item_count = 2
popup/item_0/text = "hitbox"
popup/item_0/id = 0
popup/item_1/text = "hurtbox"
popup/item_1/id = 1

[node name="Height" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarHeightLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Height"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 97.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Height:"

[node name="VarHeightEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Height"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Pushback" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarPushbackLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Pushback"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 138.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Pushback:"

[node name="VarPushbackEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Pushback"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="PushTime" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarPushTimeLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PushTime"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 148.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Push Time:"

[node name="VarPushTimeEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/PushTime"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 251.813
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Hitstop" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarHitstopLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Hitstop"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 107.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Hitstop:"

[node name="VarHitstopEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Hitstop"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 252.0
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="SFX" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarSFXLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/SFX"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 55.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "SFX:"

[node name="VarSFXEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/SFX"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = 252.0
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="Cancel" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarCancelLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Cancel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 97.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Cancel:"

[node name="VarCancelEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/Cancel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -18.0
offset_right = -7.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[node name="CancelFrame" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VarCancelFrameLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/CancelFrame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 97.0
offset_bottom = 19.0
grow_vertical = 2
theme = SubResource("Theme_m2wye")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Cancel Frame:"

[node name="VarCancelFrameEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/CancelFrame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 200.0
offset_top = -18.0
offset_right = 282.0
offset_bottom = 18.0
grow_vertical = 2
theme = SubResource("Theme_auj21")
text = "1"
placeholder_text = "1"

[connection signal="button_down" from="HitboxButton" to="." method="_on_hitbox_button_button_down"]
[connection signal="button_down" from="SaveButton" to="." method="_on_save_button_button_down"]
[connection signal="button_down" from="DeleteButton" to="." method="_on_delete_button_button_down"]
[connection signal="button_down" from="HurtboxButton" to="." method="_on_hurtbox_button_button_down"]
[connection signal="item_selected" from="CharacterOptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="HitboxOptionButton" to="." method="_on_hitbox_option_button_item_selected"]
[connection signal="item_selected" from="AnimationOptionButton" to="." method="_on_animation_option_button_item_selected"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="text_changed" from="CurrentFrameEdit" to="." method="_on_current_frame_edit_text_changed"]
[connection signal="text_changed" from="EndFrameEdit" to="." method="_on_end_frame_edit_text_changed"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Frame/VarFrameEdit" to="." method="_on_var_frame_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Blockstun/VarBlockstunEdit" to="." method="_on_var_blockstun_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Hitstun/VarHitstunEdit" to="." method="_on_var_hitstun_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Damage/VarDamageEdit" to="." method="_on_var_damage_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Position/VarPositionXEdit" to="." method="_on_var_position_x_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Position/VarPositionYEdit" to="." method="_on_var_position_y_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Scale/VarScaleXEdit" to="." method="_on_var_scale_x_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Scale/VarScaleYEdit" to="." method="_on_var_scale_y_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/EndFrame/VarEndFrameEdit" to="." method="_on_var_end_frame_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Height/VarHeightEdit" to="." method="_on_var_height_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Pushback/VarPushbackEdit" to="." method="_on_var_pushback_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/PushTime/VarPushTimeEdit" to="." method="_on_var_push_time_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Hitstop/VarHitstopEdit" to="." method="_on_var_hitstop_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/SFX/VarSFXEdit" to="." method="_on_var_sfx_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/Cancel/VarCancelEdit" to="." method="_on_var_cancel_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/MarginContainer/VBoxContainer/CancelFrame/VarCancelFrameEdit" to="." method="_on_var_cancel_frame_edit_text_submitted"]
